# rest_variantValidator

./: .gitignore  Dockerfile  INSTALLATION.md  Jenkinsfile  MANIFEST  MANIFEST.in  README.md  README.txt  REQUIREMENTS.txt  VERSION.txt  docker-compose-dev.yml  docker-compose.yml  environment.yml  index.wsgi  pyproject.toml  rest_cors_test.html  setup  setup.py  uta_docker.df  vdb_docker.df  vvsr_docker.df  vvta_docker.df  wsgi.py
application/: app_v1.py  app_v2.py  app_v3.py  app_v4.py  app_v5.py  app_v6.py  app_v7.py  app_v8.py  environment.yml  my_requests.py  requirements.txt
application/rest_api/: app.py
application/rest_api/endpoints/: __init__.py  exceptions.py  hello.py  name.py  representations.py  request_parser.py  variantvalidator_endpoints.py
application/rest_api/utils/: exceptions.py  representations.py  request_parser.py
configuration/: .variantvalidator  docker.ini
db_dockerfiles/seqrepo/: Dockerfile
db_dockerfiles/vvta/: Dockerfile
docs/: Account.md  DOCKER.md  INSTALLATION.md  MANUAL.md  USER_MANUAL.md  rest_variantValidator_tutorial.ipynb
locust/: locust.py  locustfile.py  test_set.py
rest_VariantValidator/: __init__.py  app.py  logger.py  settings.py  vdb_docker.df.py  wsgi.py
rest_VariantValidator/endpoints/: __init__.py  exceptions.py  hello.py  lovd_endpoints.py  representations.py  request_parser.py  variantformatter_endpoints.py  variantvalidator_endpoints.py  vijs_endpoints.py
rest_VariantValidator/utils/: exceptions.py  input_formatting.py  limiter.py  object_pool.py  representations.py  request_parser.py  request_parser_g2t.py  verify_password.py
rest_api/: app.py
rest_api/endpoints/: __init__.py  name.py  request_parser.py  variantformatter_endpoints.py
rest_variantValidator/: __init__.py  app.py  dbPath.py  index.html  validator_api.py  wsgi.py
rest_variantValidator/configuration/: __init__.py  config.ini
rest_variantValidator/controlModule/: __init__.py  apiAccess.py  dbConnection.py
swarms/locust/: locustfile.py  locustfile2.py  test_set.py
swarms/tests/: test_curl_local_shaip_vfv2_endpoint.py  test_curl_local_shaip_vv_endpoint.py  test_curl_restvv_lovd_endpoint.py  test_curl_restvv_vv_enpoints.py  test_curl_terracipher_vfv2_endpoint.py
tests/: conftest.py  test_endpoints.py  test_handlers.py  test_input_formatting.py  test_internal_servers.py  test_limiters.py  test_util.py  test_wsgi.py  test_wsgi_gateway.py
