[project]
name = "rest_VariantValidator"
dynamic = ["version"]
description = "REST API interface for VariantValidator"
license = {file = "LICENSE.txt"}
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = ["bioinformatics",
        "computational biology",
        "genome variants",
        "genome variation",
        "genomic variants",
        "genomic variation",
        "genomics",
        "hgvs",
        "HGVS",
        "sequencevariants"
]

requires-python = ">=3.9"

dependencies = ["httplib2>=0.9.0",
                "configparser>=3.5.0",
                "dicttoxml",
                "gunicorn",
                "flask-restx==1.0.3",
                "Flask==2.3.2",
                "Jinja2==3.1.2",
                "Werkzeug==2.3.6",
                "MarkupSafe==2.1.3",
                "VariantValidator@git+https://github.com/openvar/variantValidator@master#egg=VariantValidator"
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: AGPL-3.0",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://variantvalidator.org/"
"Source" = "https://github.com/openvar/rest_variantValidator"
"Bug Reports" = "https://github.com/openvar/variantValidator/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/VariantValidatr"

[scripts]
update_vdb = "bin/update_vdb:main"
variant_validator = "bin/variant_validator:main"
vv_configure = "bin/vv_configure:main"
batch_validator = "bin/batch_validator:main"

data = [
    { include = "configuration", glob = "configuration/empty_vv_db.sql" }
]

[tool.setuptools]
py-modules = ["rest_VariantValidator"]

[tool.setuptools_scm]

[tool.poetry.packages]
exclude = ["batch", "locust"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

