# Project metadata
[project]
name = "rest_VariantValidator"
dynamic = ["version"]  # Use dynamic version from setuptools_scm
description = "REST API interface for VariantValidator"
license = "AGPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = [
    "bioinformatics",
    "computational biology",
    "genome variants",
    "genome variation",
    "genomic variants",
    "genomic variation",
    "genomics",
    "hgvs",
    "HGVS",
    "sequencevariants"
]
requires-python = ">=3.6"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

# List of project dependencies
dependencies = [
    # Dependencies that will be installed via PyPi
    "httplib2",
    "configparser",
    "dicttoxml",
    "gunicorn",
    "flask-restx",
    "Flask",
    "Jinja2",
    "Werkzeug",
    "MarkupSafe",
    "flask-cors",
    "flask_httpauth",
    "flask_limiter",

    # Dependencies from other repositories, specified with their repository URLs and package names
    "vvhgvs@git+https://github.com/openvar/vv_hgvs@master",
    "VariantFormatter@git+https://github.com/openvar/variantFormatter@master",
    "VariantValidator@git+https://github.com/openvar/variantValidator@master"
]

# URLs related to the project
[project.urls]
Homepage = "https://variantvalidator.org/"
Source = "https://github.com/openvar/rest_variantValidator"
"Bug Reports" = "https://github.com/openvar/variantValidator/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/VariantValidatr"

# Console scripts exposed by the package
[scripts]
update_vdb = "bin/update_vdb:main"
variant_validator = "bin/variant_validator:main"
vv_configure = "bin/vv_configure:main"

# Additional data files to include in the package
data = [
    { include = "configuration", glob = "configuration/empty_vv_db.sql" }
]

# setuptools SCM for version management
[tool.setuptools_scm]

# Package discovery configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["rest_VariantValidator*"]
exclude = ["batch", "locust"]

# Build system configuration
[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]